--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--<dependency>-->
+        <!--    <groupId>com.alibaba</groupId>-->
+        <!--    <artifactId>druid-spring-boot-starter</artifactId>-->
+        <!--    <version>1.1.22</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
@@ -98,12 +104,11 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>4.0.0-RC1</version>
-        </dependency>
-
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.shardingsphere</groupId>-->
+        <!--    <artifactId>sharding-jdbc-spring-boot-starter</artifactId>-->
+        <!--    <version>4.1.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
