--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,44 +7,45 @@ spring:
     database: 0
   application:
     name: reggie_take_out
-#  datasource:
-#    druid:
-#      driver-class-name: com.mysql.cj.jdbc.Driver
-#      url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-#      username: root
-#      password: 123456
-  shardingsphere:
-    datasource:
-      names:
-        master,slave
-      # 主数据源
-      master:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.138.100:3306/rw?characterEncoding=utf-8
-        username: root
-        password: root
-      # 从数据源
-      slave:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.138.101:3306/rw?characterEncoding=utf-8
-        username: root
-        password: root
-    masterslave:
-      # 读写分离配置
-      load-balance-algorithm-type: round_robin #轮询
-      # 最终的数据源名称
-      name: dataSource
-      # 主库数据源名称
-      master-data-source-name: master
-      # 从库数据源名称列表，多个逗号分隔
-      slave-data-source-names: slave
-    props:
-      sql:
-        show: true #开启SQL显示，默认false
-    main:
-      allow-bean-definition-overriding: true
+  datasource:
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+      username: root
+      password: 123456
+#  shardingSphere:
+#    # 配置真实数据源
+#    dataSources:
+#      names: ds0,ds1
+#      # 配置第 1 个数据源
+#      ds0:
+#        type: com.alibaba.druid.pool.DruidDataSource
+#        driverClassName: com.mysql.cj.jdbc.Driver
+#        jdbcUrl: jdbc:mysql://localhost:3306/ds0
+#        username: root
+#        password: 123456
+#      # 配置第 2 个数据源
+#      ds1:
+#        type: com.alibaba.druid.pool.DruidDataSource
+#        driverClassName: com.mysql.cj.jdbc.Driver
+#        jdbcUrl: jdbc:mysql://localhost:3306/ds1
+#        username: root
+#        password: 123456
+#
+#    masters-lave:
+#      # 读写分离配置
+#      load-balance-algorithm-type: round_robin #轮询
+#      # 最终的数据源名称
+#      name: dataSource
+#      # 主库数据源名称
+#      master-data-source-name: ds0
+#      # 从库数据源名称列表，多个逗号分隔
+#      slave-data-source-names: ds1
+#    props:
+#      sql:
+#        show: true #开启SQL显示，默认false
+#    main:
+#      allow-bean-definition-overriding: true
 
   cache:
     redis:
