--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,8 +44,8 @@ spring:
 #    props:
 #      sql:
 #        show: true #开启SQL显示，默认false
-#    main:
-#      allow-bean-definition-overriding: true
+    main:
+      allow-bean-definition-overriding: true
 
   cache:
     redis:
